--- a/src/WebApp/Web.config
+++ b/src/WebApp/Web.config
@@ -16,27 +16,29 @@
     <add key="Domain" value="" />
     <!--<Domain name for the users of your company.  Example: microsoft.com>-->
     <!-- Settings for AAD authentication -->
-    <add key="ida:ClientId" value="" />
-    <!--<client id of the service principal created>-->
-    <add key="ida:AADInstance" value="" />
+    <add key="arm:AADInstance" value="" />
     <!--<your aad instance.  Example: https://login.microsoftonline.com/>-->
-    <add key="ida:TenantId" value="" />
-    <!--<Your tenant ID>-->
-    <add key="ida:PostLogoutRedirectUri" value="" />
+    <add key="arm:PostLogoutRedirectUri" value="" />
     <!--<Your post logout redirect URI>-->
     <!-- Connection settings for the ADLS storage housing the data -->
-    <add key="adls:ClientId" value="" />
+    <add key="arm:ClientId" value="" />
     <!--<client id of the service principal created>-->
-    <add key="adls:ClientSecret" value="" />
+    <add key="arm:ClientSecret" value="" />
     <!--<client secret of the service principal created>-->
-    <add key="adls:TenantId" value="" />
+    <add key="arm:TenantId" value="" />
     <!--<Your tenant ID>-->
-    <add key="adls:AccountName" value="" />
+    <add key="arm:AccountName" value="" />
     <!--<the name of the adls account where the activity file is in>-->
-    <add key="adls:Path" value="" />
+    <add key="arm:Path" value="" />
     <!--<agreed upon path for the activity file.>-->
-    <add key="adls:FileName" value="" />
-    <!--<agreed upon name for the activity file.>-->
+    <add key="arm:SubscriptionId" value="" />
+    <!--<Subscription id where the resources are deployed.>-->
+    <add key="arm:ManagedResourceGroupName" value="" />
+    <!--<Resource group where the resources are deployed.>-->
+    <add key="arm:DataFactoryName" value="" />
+    <!--<Name of the data factory.>-->
+    <add key="arm:PipelineName" value="" />
+    <!--<Name of the data factory pipeline.>-->
     <add key="cache:RefreshHourOfDayUtc" value="5" />
     <add key="cache:RefreshIntervalHours" value="24" />
   </appSettings>
@@ -49,7 +51,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages controlRenderingCompatibilityVersion="4.0" />
@@ -95,6 +97,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
