Updating web app to read calculations from HDI compute.

--- a/src/WebApp/Web.config
+++ b/src/WebApp/Web.config
@@ -41,6 +41,12 @@
     <!--<Name of the data factory pipeline.>-->
     <add key="cache:RefreshHourOfDayUtc" value="5" />
     <add key="cache:RefreshIntervalHours" value="24" />
+    <add key="arm:ConnectionString" value="" />
+    <!--<Connection string of ADLS gen2 account containing the Wkw scores file.>-->
+    <add key="arm:ContainerName" value="" />
+    <!--<Container name where Wkw scores file is stored.>-->
+    <add key="arm:FilePath" value="" />
+    <!--<Path for the Wkw scores file.>-->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
